// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`License prompt renders a prompt with a link to License Management 1`] = `
<_EuiPageEmptyPrompt
  actions={
    Array [
      <EuiLink
        href="/license_management"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Manage your license"
          id="xpack.watcher.app.licenseErrorLinkText"
        />
      </EuiLink>,
    ]
  }
  body={
    <p>
      License error
    </p>
  }
  color="danger"
  iconType="warning"
  title={
    <h1>
      <Memo(MemoizedFormattedMessage)
        defaultMessage="License error"
        id="xpack.watcher.app.licenseErrorTitle"
      />
    </h1>
  }
/>
`;

exports[`License prompt renders a prompt without a link to License Management 1`] = `
<_EuiPageEmptyPrompt
  actions={
    Array [
      undefined,
    ]
  }
  body={
    <React.Fragment>
      <p>
        License error
      </p>
      <p>
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Contact your administrator to change your license."
          id="xpack.watcher.app.licenseErrorBody"
        />
      </p>
    </React.Fragment>
  }
  color="danger"
  iconType="warning"
  title={
    <h1>
      <Memo(MemoizedFormattedMessage)
        defaultMessage="License error"
        id="xpack.watcher.app.licenseErrorTitle"
      />
    </h1>
  }
/>
`;
